# dblitz

./: .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  README.md  package-lock.json  package.json  vite.config.js
.githooks/: pre-push
.github/workflows/: checks.yml  release.yml
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: filtered_scroll_benchmark.rs  rowid_seek_benchmark.rs
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  lib.rs  main.rs
src-tauri/src/db/: benchmark.rs  export.rs  filters.rs  mod.rs  query.rs  schema.rs  sql.rs  sql_exec.rs  types.rs  util.rs
src/lib/: store.svelte.test.ts  store.svelte.ts  store.test.ts
src/lib/components/: BrowseData.svelte  ColumnFinder.svelte  ColumnSettings.svelte  DataGrid.svelte  DatabaseStructure.svelte  ExecuteSQL.svelte  SqlEditor.svelte  Toolbar.svelte  autoSelectFirstTable.svelte.ts  cellSelection.svelte.ts  cellSelection.test.ts  columnView.test.ts  columnView.ts  columnWidths.test.ts  columnWidths.ts  copyGate.test.ts  copyGate.ts  dragReorder.svelte.ts  dragReorder.test.ts  filterOperators.test.ts  filterOperators.ts  gridGeometry.test.ts  gridGeometry.ts  pinnedFilters.svelte.ts  pinnedFilters.test.ts  selectionData.test.ts  selectionData.ts  selectionStats.test.ts  selectionStats.ts  sqlTable.test.ts  sqlTable.ts  toolbarUtils.test.ts  toolbarUtils.ts  virtualRows.svelte.ts  virtualRows.test.ts
src/routes/: +page.svelte
